--- a/adapt_cluster_provisioning/roles/core/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/core/vars/main.yml
@@ -51,6 +51,8 @@ tool_python_libraries:
 mount_paths:
   - "{{ tool_path }}"
   - "{{ data_path }}"
+  - "{{ galaxy_path }}"
+
 data_share: "{{ fileserver_ip }}:/var/nfs/galaxydata"
 
 
