--- a/adapt_cluster_provisioning/roles/worker/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/worker/tasks/main.yml
@@ -3,3 +3,6 @@
 
 - name: Mount tool volume
   lineinfile: "dest=/etc/fstab 'line={{ tool_share }}     {{ tool_path }}  nfs auto    0   0'"
+
+- name: Mount galaxy volume
+  lineinfile: "dest=/etc/fstab 'line={{ galaxy_share }}     {{ galaxy_path }}  nfs auto    0   0'"
