Moved task to transfer proftp config file from master role to deploying role. Master role is currently run from inside the master host and there is not likely to be a password in a credentials file

--- a/adapt_cluster_provisioning/roles/postgres_initializiation/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/postgres_initializiation/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+# Config file needs password, credentials file is unlikely to be on the master,
+# as it is set locally
+- name: Uploading proFTPd config file
+  template: src=proftpd.conf.j2 dest=/opt/proftpd/etc/proftpd.conf
+
 - name: Create postgres galaxy user
   postgresql_user: name=galaxy 
                    password={{ galaxy_pg_pass }} 
