Reboot master before workers, otherwise workers do not mount shares from master

--- a/adapt_cluster_provisioning/adapt_cluster_provisioning_playbook.yml
+++ b/adapt_cluster_provisioning/adapt_cluster_provisioning_playbook.yml
@@ -47,10 +47,17 @@
   roles:
     - master
 
-# Reboot workers and master
+# Reboot master
+- hosts:
+  - master_private
+  sudo: true
+  user: admin
+  roles:
+    - reboot
+
+# Reboot workers
 - hosts:
   - workers
-  - master_private
   sudo: true
   user: admin
   roles:
