--- a/adapt_cluster_provisioning/roles/core/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/core/vars/main.yml
@@ -43,6 +43,7 @@ tool_packages:
  - libxml2-dev
  - libxslt1-dev
  - python-numpy
+ - python-biopython
  # for java driven packages
  - default-jdk
 
