Renamed master_preparation role

--- a/adapt_cluster_provisioning/adapt_cluster_masterprep_playbook.yml
+++ b/adapt_cluster_provisioning/adapt_cluster_masterprep_playbook.yml
@@ -10,7 +10,7 @@
   vars_files: roles/core/vars/main.yml
   roles:
     - update
-    - master_preparation
+    - prepare
     - mirrors
     - nginx
   handlers:
