Different nginx config file when mirrors and non-mirrors

--- a/adapt_cluster_provisioning/adapt_cluster_masterprep_playbook.yml
+++ b/adapt_cluster_provisioning/adapt_cluster_masterprep_playbook.yml
@@ -8,6 +8,8 @@
   user: admin
   sudo: True
   vars_files: roles/core/vars/main.yml
+  vars:
+    - nginx_mirror: true
   roles:
     - update
     - prepare
