--- a/adapt_cluster_provisioning/roles/core/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/core/tasks/main.yml
@@ -25,11 +25,14 @@
   lineinfile: "dest=/etc/fstab 'line={{ data_share }}     {{ data_path }}  nfs auto    0   0'"
 
 # SLURM configuration
+- name: Create mungekey
+  shell: dd if=/dev/urandom bs=1 count=1024 >/home/admin/mungekey
+  notify: chown admin home
 - name: Set permissions on /etc
   file: path=/etc state=directory mode=0755
 - name: Create munge conf dir
   file: path=/etc/munge state=directory
-- name: Put munge key in place # created by masterprep
+- name: Put munge key in place 
   copy: src=/home/admin/mungekey dest=/etc/munge/munge.key owner=munge mode=0600
 - name: Modify hosts file for munge
   lineinfile: "dest=/etc/hosts line='{{ ansible_eth0.ipv4.address }}    {{ ansible_hostname }}'"
