use_mirror instead of nginx_mirror and extend to pip command as well

--- a/adapt_cluster_provisioning/adapt_cluster_masterprep_playbook.yml
+++ b/adapt_cluster_provisioning/adapt_cluster_masterprep_playbook.yml
@@ -9,7 +9,7 @@
   sudo: True
   vars_files: roles/core/vars/main.yml
   vars:
-    - nginx_mirror: true
+    - use_mirror: true
   roles:
     - update
     - prepare
