Mounting datashare from fileserver or master (e.g. in test setup)

--- a/adapt_cluster_provisioning/adapt_cluster_provisioning_playbook.yml
+++ b/adapt_cluster_provisioning/adapt_cluster_provisioning_playbook.yml
@@ -23,6 +23,8 @@
   - workers
   vars_files:
     - inventory/cluster_data.yml
+  vars:
+    - has_fileserver: true
   user: admin
   sudo: true
   roles:
