--- a/adapt_cluster_provisioning/roles/worker/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/worker/tasks/main.yml
@@ -6,3 +6,9 @@
 
 - name: Mount galaxy volume
   lineinfile: "dest=/etc/fstab 'line={{ galaxy_share }}     {{ galaxy_path }}  nfs auto    0   0'"
+
+# Mount data from master in case no fileserver. Otherwise this is done in core
+- name: Mount data volume from master
+  lineinfile: "dest=/etc/fstab 'line={{ data_share_master }}     {{ data_path }}  nfs auto    0   0'"
+  when: has_fileserver not defined or not has_fileserver
+  
