--- a/adapt_cluster_provisioning/roles/worker/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/worker/vars/main.yml
@@ -2,3 +2,6 @@
 
 tool_share: "{{ master_ip }}:{{ tool_path }}"
 galaxy_share: "{{ master_ip }}:{{ galaxy_path }}"
+data_share_fileserver: "{{ fileserver_ip }}:{{ fileserver_nfs_share }}"
+data_share_master: "{{ master_ip }}:{{ fileserver_nfs_share }}"
+
