Export data path on master conditionally

--- a/adapt_cluster_provisioning/roles/master/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/master/tasks/main.yml
@@ -75,3 +75,9 @@
               regexp="{{ galaxy_path }}"
               state=present
               line="{{ galaxy_path }}    *(rw,sync,no_root_squash,no_subtree_check)"
+- name: Add data path to NFS exports if not has_fileserver
+  lineinfile: dest=/etc/exports
+              regexp="{{ data_path }}"
+              state=present
+              line="{{ data_path }}    *(rw,sync,no_root_squash,no_subtree_check)"
+  when: has_fileserver not defined or not has_fileserver
