--- a/adapt_cluster_provisioning/roles/master/tasks/tools.yml
+++ b/adapt_cluster_provisioning/roles/master/tasks/tools.yml
@@ -25,31 +25,28 @@
   command: make install chdir=/tmp/cmake-2.8.12
 #### TODO remove previous block when cmake is updated in apt repo
 
-- name: Get percolator source # FIXME dont depend on fresh source, pick a dist when it comes out, or limit to a certain version
-  git: repo=git://github.com/percolator/percolator.git  
-       dest=/tmp/percolator_checkout 
-       version=3dae637e185852b00616f5f56d6a519bab148145 # FIXME Cmake problems with libiconv still unresolved?
+# Percolator
+- name: Get percolator source 
+  get_url: url={{ percolator_url }} dest=/tmp/percolator.tar.gz 
 - name: Create percolator tool path
-  file: path={{ tool_path }}/{{ percolator_pkg }}/{{ percolator_ver }} state=directory
-- name: CMake percolator
-  command: cmake -DCMAKE_INSTALL_PREFIX="." /tmp/percolator_checkout chdir={{ tool_path }}/{{ percolator_pkg }}/{{ percolator_ver }}
+  file: path={{ tool_path }}/{{ percolator_path}} state=directory
+- name: Cmake percolator
+  command: cmake -DTARGET_ARCH=amd64 -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX={{ tool_path }}/{{ percolator_path }} -DXML_SUPPORT=ON /tmp/{{ percolator_src }} chdir={{ tool_path }}/{{ percolator_path }}
 - name: Make percolator
-  command: make -j8 chdir={{ tool_path }}/{{ percolator_pkg }}/{{ percolator_ver }}
-- name: Install percolator
-  command: make install chdir={{ tool_path }}/{{ percolator_pkg }}/{{ percolator_ver }}
-- include: tool_dependency_fixer.yml toolpath={{ tool_path }}/{{ percolator_pkg }}/{{ percolator_ver }}/bin envdest={{ tool_path }}/{{ percolator_pkg }}/{{ percolator_ver }} toolroot={{ tool_path }}/{{ percolator_pkg }} ldline="#"
+  command: make -j 4 chdir={{ tool_path }}/{{ percolator_path }}
+  command: make -j 4 package chdir={{ tool_path }}/{{ percolator_path }}
+- include: tool_dependency_fixer.yml toolpath={{ tool_path }}/{{ percolator_path }}/bin envdest={{ tool_path }}/{{ percolator_path }} toolroot={{ tool_path }}/{{ percolator_pkg }} ldline="#"
 
 # percolator converters
-- name: Create percolator converters tool path
-  file: path={{ tool_path }}/{{ perconvert_pkg }}/{{ percolator_ver }} state=directory
-- name: CMake percolator converters
-  command: cmake -DCMAKE_INSTALL_PREFIX="." /tmp/percolator_checkout/src/converters chdir={{ tool_path }}/{{ perconvert_pkg }}/{{ percolator_ver }}
+- name: Create percolator converter tool path
+  file: path={{ tool_path }}/{{ perconvert_path}} state=directory
+- name: Cmake percolator converters
+  command: cmake -DTARGET_ARCH=amd64 -DCMAKE_INSTALL_PREFIX={{ tool_path }}/{{ perconvert_path }} -DCMAKE_BUILD_TYPE=Release -DSERIALIZE="TokyoCabinet" $src_dir/percolator/src/converters chdir={{ tool_path }}/{{ perconvert_path }}
 - name: Make percolator converters
-  command: make -j8 chdir={{ tool_path }}/{{ perconvert_pkg }}/{{ percolator_ver }}
-- name: Install percolator
-  command: make install chdir={{ tool_path }}/{{ perconvert_pkg }}/{{ percolator_ver }}
-- include: tool_dependency_fixer.yml toolpath={{ tool_path }}/{{ perconvert_pkg }}/{{ percolator_ver }}/bin envdest={{ tool_path }}/{{ perconvert_pkg }}/{{ percolator_ver }} toolroot={{ tool_path }}/{{ perconvert_pkg }} ldline="LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH"
-
+  command: make -j 4 chdir={{ tool_path }}/{{ perconvert_path }}
+  command: make -j 4 package chdir={{ tool_path }}/{{ perconvert_path }}
+- include: tool_dependency_fixer.yml toolpath={{ tool_path }}/{{ perconvert_path }}/bin envdest={{ tool_path }}/{{ perconvert_path}} toolroot={{ tool_path }}/{{ perconvert_pkg }} ldline="#"
+# FIXME check if ldline works!
 
 # Pycolator installation
 - name: Create pycolator tool path
