--- a/adapt_cluster_provisioning/roles/master/vars/tools.yml
+++ b/adapt_cluster_provisioning/roles/master/vars/tools.yml
@@ -4,9 +4,14 @@ msgf_ver: 9733
 msgf_pkg: msgfplus
 msgf_url: http://proteomics.ucsd.edu/Downloads/MSGFPlus.20130828.zip
 
+percolator_url: https://github.com/percolator/percolator/archive/rel-2-07-02.tar.gz
+percolator_src: percolator-rel-2-07-02
 percolator_pkg: percolator
 perconvert_pkg: percolator_converters
-percolator_ver: 2.1_makeshift
+percolator_ver: 2.07
+percolator_path: {{ percolator_pkg }}/{{ percolator_ver }}
+perconvert_path: {{ perconvert_pkg }}/{{ percolator_ver }}
+
 
 pycolator_pkg: pycolator
 pycolator_ver: 0.1
