A comment for explanaation

--- a/adapt_cluster_provisioning/roles/master/tasks/tool_dependency_fixer.yml
+++ b/adapt_cluster_provisioning/roles/master/tasks/tool_dependency_fixer.yml
@@ -2,6 +2,7 @@
 # Fixing tool dependencies after install
 # Write to an env.sh file a path
 
+### Variables passed example:
 #toolpath: /mnt/galaxytools/percolator/2.1/bin
 #envdest: /mnt/galaxytools/percolator/2.1
 #toolroot: /mnt/galaxytools/percolator
