Added reboot to playbook

--- a/adapt_cluster_provisioning/adapt_test_environment_playbook.yml
+++ b/adapt_cluster_provisioning/adapt_test_environment_playbook.yml
@@ -51,3 +51,12 @@
   - worker
   handlers:
   - include: handlers/handlers.yml
+
+# Reboots
+- hosts:
+  - master
+  - worker
+  user: admin
+  sudo: True
+  roles:
+  - reboot
