--- a/adapt_cluster_provisioning/roles/master/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/master/vars/main.yml
@@ -1,13 +1,14 @@
 ---
 # Vars for master installation
+
 postgres_version: 9.1
-postgres_home: /usr/lib/postgresql/{{ postgres_version }}/bin
 proftpd_pkg: proftpd-1.3.4a
 proftpd_install_dir: /opt/proftpd
 
 master_packages:
   - nfs-kernel-server
   - postgresql
+  - postgresql-contrib
   - mercurial
   # Required for compiling ProFTPd and psycopg2 (must match installed PostgreSQL version!)
   - libpq-dev
