Typos and moved reboot roles to individual plays to avoid simultaneous reboot nfs problems

--- a/adapt_cluster_provisioning/adapt_test_environment_playbook.yml
+++ b/adapt_cluster_provisioning/adapt_test_environment_playbook.yml
@@ -21,7 +21,7 @@
 # Update boxes and install core stuff
 - hosts:
   - master
-  - worker
+  - workers
   user: admin
   sudo: True
   vars_files:
@@ -43,23 +43,16 @@
   - master
   - tools
   - galaxy_initialization
+  - reboot
   handlers:
   - include: handlers/handlers.yml
 
 # Worker
-- hosts: worker
+- hosts: workers
   user: admin
   sudo: True
   roles:
   - worker
+  - reboot
   handlers:
   - include: handlers/handlers.yml
-
-# Reboots
-- hosts:
-  - master
-  - worker
-  user: admin
-  sudo: True
-  roles:
-  - reboot
