--- a/adapt_cluster_provisioning/roles/worker/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/worker/tasks/main.yml
@@ -7,3 +7,5 @@
 - name: Mount galaxy volume
   lineinfile: "dest=/etc/fstab 'line={{ galaxy_share }}     {{ galaxy_path }}  nfs auto    0   0'"
 
+- name: Mount data volume
+  lineinfile: "dest=/etc/fstab 'line={{ data_share }}     {{ data_path }}  nfs auto    0   0'"
