--- a/adapt_cluster_provisioning/roles/tools/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/tools/tasks/main.yml
@@ -29,24 +29,26 @@
 - name: Get percolator source 
   get_url: url={{ percolator_url }} dest=/tmp/percolator.tar.gz 
 - name: Create percolator tool path
-  file: path={{ tool_path }}/{{ percolator_path}} state=directory
+  file: path={{ tool_path }}/{{ percolator_path}}/bin state=directory
 - name: Untar source
   command: tar xvfz percolator.tar.gz chdir=/tmp/
 - name: Cmake percolator
   command: cmake -DTARGET_ARCH=amd64 -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX={{ tool_path }}/{{ percolator_path }} -DXML_SUPPORT=ON /tmp/{{ percolator_src }} chdir={{ tool_path }}/{{ percolator_path }}
 - name: Make percolator
   command: make -j 4 chdir={{ tool_path }}/{{ percolator_path }}
-  command: make -j 4 package chdir={{ tool_path }}/{{ percolator_path }}
+- name: Make install percolator
+  command: make install chdir={{ tool_path }}/{{ percolator_path }}
 - include: tool_dependency_fixer.yml toolpath={{ tool_path }}/{{ percolator_path }}/bin envdest={{ tool_path }}/{{ percolator_path }} toolroot={{ tool_path }}/{{ percolator_pkg }} ldline="#"
 
 # percolator converters
 - name: Create percolator converter tool path
-  file: path={{ tool_path }}/{{ perconvert_path}} state=directory
+  file: path={{ tool_path }}/{{ perconvert_path}}/bin state=directory
 - name: Cmake percolator converters
   command: cmake -DTARGET_ARCH=amd64 -DCMAKE_INSTALL_PREFIX={{ tool_path }}/{{ perconvert_path }} -DCMAKE_BUILD_TYPE=Release -DSERIALIZE="TokyoCabinet" /tmp/{{ percolator_src }}/src/converters chdir={{ tool_path }}/{{ perconvert_path }}
 - name: Make percolator converters
-  command: make -j 4 chdir={{ tool_path }}/{{ perconvert_path }}
-  command: make -j 4 package chdir={{ tool_path }}/{{ perconvert_path }}
+  command: make chdir={{ tool_path }}/{{ perconvert_path }}
+- name: Make install percolator converters
+  command: make install chdir={{ tool_path }}/{{ perconvert_path }}
 - include: tool_dependency_fixer.yml toolpath={{ tool_path }}/{{ perconvert_path }}/bin envdest={{ tool_path }}/{{ perconvert_path}} toolroot={{ tool_path }}/{{ perconvert_pkg }} ldline="#"
 # FIXME check if ldline works!
 
