Some bugs with pkg names and version nrs on ubuntu14

--- a/adapt_cluster_provisioning/roles/core/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/core/vars/main.yml
@@ -53,7 +53,7 @@ tool_packages:
   - libxml2-dev
   - libxslt1-dev
   - python3-numpy
-  - python3-biopython
+  - python-biopython
   # for java driven packages MSGFplus
   - default-jdk
 
