Proftpd install dir referenced in two differnet roles

--- a/adapt_cluster_provisioning/adapt_test_environment_playbook.yml
+++ b/adapt_cluster_provisioning/adapt_test_environment_playbook.yml
@@ -38,6 +38,7 @@
   sudo: True
   vars_files:
   - credentials/dbpass.yml
+  - roles/master/vars/main.yml # for proftpd install dir needed in galaxy initiation
   roles:
   - nginx
   - master
