Biopython should be python3

--- a/adapt_cluster_provisioning/roles/core/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/core/vars/main.yml
@@ -53,12 +53,12 @@ tool_packages:
   - libxml2-dev
   - libxslt1-dev
   - python3-numpy
-  - python-biopython
   # for java driven packages MSGFplus
   - default-jdk
 
 tool_python_libraries:
  - lxml
+ - biopython
  - simplejson
 
 mount_paths:
